# oresat-battery-app

./: CMakeLists.txt  Kconfig  README.md  can_setup.sh  can_teardown.sh  mcxn-card-notes.txt  overlay_calib.conf  overlay_debug.conf  prj.conf
boards/: native_sim.conf  native_sim.overlay
boards/oresat_mcxn947_battery_card/: Kconfig  Kconfig.defconfig  Kconfig.oresat_mcxn947_battery_card  board.yml  oresat_mcxn947_battery_card-pinctrl.dtsi  oresat_mcxn947_battery_card.yaml  oresat_mcxn947_battery_card_mcxn947_cpu0.dts  oresat_mcxn947_battery_card_mcxn947_cpu0.dtsi  oresat_mcxn947_battery_card_mcxn947_cpu0_defconfig
boards/oresat_stm32_battery_card/: Kconfig.defconfig  Kconfig.oresat_stm32_battery_card  board.yml  nucleo_f091rc.dts  oresat_stm32_battery_card.dts  oresat_stm32_battery_card.yaml  oresat_stm32_battery_card_defconfig
boards/oresat_stm32_battery_card/dts/bindings/: battery-packs.yaml
drivers/sensor/maxim/max17205/: max17205.c  max17205.h  max17205_emul.c
dts/bindings/: battery-packs.yaml  maxim,max17205.yaml
objdict/: CO_OD.c  batt.md
src/: VERSION.in  batt.c  batt.h  calib.c  calib.h  can.c  diag.h  hist.c  hist.h  main.c  max17205_intf.c  max17205_intf.h
